SERVER-63865 Handle missing index idents during standalone startup recovery

GitOrigin-RevId: 7a3d5a02f59a38b8307932dee74930cd110520a8